--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           </div>
           <div class="col-lg-5 ms-lg-3">
               <h2 data-aos="fade-right" data-aos-duration="2000" class="">About Us</h2>
-              <p data-aos="fade-right" data-aos-duration="2100">Welcome to our premier door and window solutions website! At [Your Company Name], we are dedicated to transforming your living spaces with top-quality products that blend aesthetics, functionality, and durability seamlessly.</p>
+              <p data-aos="fade-right" data-aos-duration="2100">Welcome to our premier door and window solutions website! At Doorway, we are dedicated to transforming your living spaces with top-quality products that blend aesthetics, functionality, and durability seamlessly.</p>
               <p data-aos="fade-right" data-aos-duration="2200">Our extensive range of doors and windows caters to every architectural style, ensuring a perfect fit for your home or commercial space. </p>
               <p data-aos="fade-right" data-aos-duration="2300"> Explore our website, and let's embark on this exciting journey of enhancing your living environment together!</p>
               <p data-aos="fade-right" data-aos-duration="2400"> we prioritize your needs and are here to guide you at every step. Whether you seek modern elegance or timeless charm, let our doors and windows elevate your space to new heights</p>
