--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav ms-auto">
           <a class="nav-link" aria-current="page" href="#">Home</a>
-          <a class="nav-link" href="#">About</a>
-          <a class="nav-link" href="#">Services</a>
-          <a class="nav-link ">Pages</a>             
+          <a class="nav-link" href="#explore">About</a>
+          <a class="nav-link" href="#products">Products</a>
+          <a class="nav-link" href="#features">Services</a>
+          <a class="nav-link " href="#contact">Contact</a>          
         </div>  
       </div>
     </div>
