--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             <h4>Call:</h4>
             <p>9746181876</p>
           </div>
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3920.2352401891612!2d75.9796769!3d10.7163306!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba7bd33d829366d%3A0xa007b5f779ca146c!2sDoorway!5e0!3m2!1sen!2sin!4v1690728987344!5m2!1sen!2sin" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
+                   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3919.99501287687!2d76.0235227!3d10.734867299999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba7bf47f2635c81%3A0x134455cf1cc429cb!2sV.V%20Sawmill%20%26%20Doors!5e0!3m2!1sen!2sin!4v1690955070549!5m2!1sen!2sin" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
         </div>
 
       </div>
