--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,8 +7,8 @@
     <title>Doorway</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <link rel="stylesheet" href="style.css">
   </head>
 <body>
@@ -15,7 +16,7 @@
 <!-- Navbar section -->
   <nav class="navbar navbar-expand-md fixed-top">
     <div class="container">
-      <a class=" navbar-brand" href="#">Doorway</a> 
+      <a class=" navbar-brand" href="#">Doorway</a>
       <button class="navbar-toggler x" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -27,8 +28,8 @@
           <a class="nav-link" href="#explore">About</a>
           <a class="nav-link" href="#products">Products</a>
           <a class="nav-link" href="#features">Services</a>
-          <a class="nav-link " href="#contact">Contact</a>          
-        </div>  
+          <a class="nav-link " href="#contact">Contact</a>
+        </div>
       </div>
     </div>
   </nav>
@@ -44,7 +45,7 @@
         <div class="col-x-6">
           <a  href="//api.whatsapp.com/send?phone=919746181876"
           data-aos="fade-right"  data-aos-duration="2800" class="btn btn-success whatsapp-btn"><i class="fa-brands fa-whatsapp me-2"></i>Whatsapp</a>
-    
+
         </div>
       </div>
     </div>
@@ -66,7 +67,7 @@
           </div>
           <div class="col-lg-5 ms-lg-3">
               <h2 data-aos="fade-right" data-aos-duration="2000" class="">About Us</h2>
-              <p data-aos="fade-right" data-aos-duration="2100">Welcome to our premier door and window solutions website! At Doorway, we are dedicated to transforming your living spaces with top-quality products that blend aesthetics, functionality, and durability seamlessly.</p>
+              <p data-aos="fade-right" data-aos-duration="2100">Welcome to our premier door and window solutions website! At [Your Company Name], we are dedicated to transforming your living spaces with top-quality products that blend aesthetics, functionality, and durability seamlessly.</p>
               <p data-aos="fade-right" data-aos-duration="2200">Our extensive range of doors and windows caters to every architectural style, ensuring a perfect fit for your home or commercial space. </p>
               <p data-aos="fade-right" data-aos-duration="2300"> Explore our website, and let's embark on this exciting journey of enhancing your living environment together!</p>
               <p data-aos="fade-right" data-aos-duration="2400"> we prioritize your needs and are here to guide you at every step. Whether you seek modern elegance or timeless charm, let our doors and windows elevate your space to new heights</p>
@@ -162,7 +163,7 @@
         </div>
       </div>
   </div>
-</section><!-- End Features Section -->
+</section>
 
 <!-- Contact Section -->
  <section id="contact" class="contact" >
@@ -188,7 +189,7 @@
             <h4>Call:</h4>
             <p>9746181876</p>
           </div>
-                   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3919.99501287687!2d76.0235227!3d10.734867299999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba7bf47f2635c81%3A0x134455cf1cc429cb!2sV.V%20Sawmill%20%26%20Doors!5e0!3m2!1sen!2sin!4v1690955070549!5m2!1sen!2sin" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3919.99501287687!2d76.0235227!3d10.734867299999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba7bf47f2635c81%3A0x134455cf1cc429cb!2sV.V%20Sawmill%20%26%20Doors!5e0!3m2!1sen!2sin!4v1690955070549!5m2!1sen!2sin" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
         </div>
 
       </div>
@@ -242,7 +243,6 @@
 
 <script src="assets/script.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js" integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa" crossorigin="anonymous"></script>
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script>
